--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="./build/style.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet"></head>
+    <link href="build/style.css" rel="stylesheet"></head>
     <body>
         <div id='root'></div>
         <div class='footer'>Coded by 
             <a href="http://codepen.io/Roky/full/YqGqWg" target='_blank'>Roky</a>
         </div>
-    <script type="text/javascript" src="manifest.0d9c2518072b03865549.js"></script><script type="text/javascript" src="vendor.38f19f7598653d6d3fa4.js"></script><script type="text/javascript" src="bundle.9992efebe4e517152a3e.js"></script></body>
+    <script type="text/javascript" src="build/manifest.0d9c2518072b03865549.js"></script><script type="text/javascript" src="build/vendor.38f19f7598653d6d3fa4.js"></script><script type="text/javascript" src="build/bundle.9992efebe4e517152a3e.js"></script></body>
 </html>
